<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A6F8F0"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="30sp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#160D2B"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/input"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="22sp" />
        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/input2"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="54dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="30sp"
                android:background="#5454A3"
                android:gravity="center"
                android:text="@string/button"
                android:textColor="#373737"
                android:textSize="20sp"
                app:backgroundTint="#89BE21"
                app:backgroundTintMode="src_in" />

            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:background="#5454A3"
                android:gravity="center"
                android:text="@string/button2"
                android:textColor="#373737"
                android:textSize="20sp"
                app:backgroundTint="#89BE21"
                app:backgroundTintMode="src_in" />

            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:background="#5454A3"
                android:gravity="center"
                android:text="@string/button3"
                android:textColor="#373737"
                android:textSize="20sp"
                app:backgroundTint="#89BE21"
                app:backgroundTintMode="src_in" />

            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:background="#5454A3"
                android:gravity="center"
                android:text="@string/button4"
                android:textColor="#373737"
                android:textSize="20sp"
                app:backgroundTint="#89BE21"
                app:backgroundTintMode="src_in" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50sp"
            android:gravity="center"
            android:text="@string/output"
            android:textSize="28sp" />

    </LinearLayout>

</layout>